--- a/css/game.css
+++ b/css/game.css
@@ -1,10 +1,36 @@
+main{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background-image: url('../imagens/bg.png');
+    background-size: cover;
+    min-height: 10vh;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 20px 50px;
+}
+
+header{
+    display: flex;
+    align-items: center;
+    max-width: 800px;
+    justify-content: space-between;
+    background-color: rgba(63, 53, 96, 0.8);
+    font-size: 1.2em;
+    color: #fff;
+    width: 100%;
+    padding: 30px;
+    margin: 0 0 30px;
+    border-radius: 5px;
+}
+
 .grid {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 15px;
     width: 100%;
     max-width: 800px;
-    margin: 100px auto;
+    margin: 0 auto;
 }
 
 .card{
@@ -14,6 +40,7 @@
     position: relative;
     transition: all 400ms ease;
     transform-style: preserve-3d;
+    background-color: #ccc;
 }
 
 .face {
